Fixed the issue of overlaping text

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,5 @@ p, a {
   }
 
 header {
-    position: fixed;
     display: inline-block;
 }
